// ------------------------------------------------------------
// Copyright (c) Microsoft Corporation and Dapr Contributors.
// Licensed under the MIT License.
// ------------------------------------------------------------

syntax = "proto3";

package dapr.proto.operator.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/dapr/dapr/pkg/proto/operator/v1;operator";

service Operator {
  // Sends events to Dapr sidecars upon component changes.
  rpc ComponentUpdate (ComponentUpdateRequest) returns (stream ComponentUpdateEvent) {}
  // Returns a list of available components
  rpc ListComponents (ListComponentsRequest) returns (ListComponentResponse) {}
  // Returns a given configuration by name
  rpc GetConfiguration (GetConfigurationRequest) returns (GetConfigurationResponse) {}
  // Returns a list of pub/sub subscriptions
  rpc ListSubscriptions (google.protobuf.Empty) returns (ListSubscriptionsResponse) {}
  // Returns a given resiliency configuration by name
  rpc GetResiliency (GetResiliencyRequest) returns (GetResiliencyResponse) {}
  // Returns a list of resiliency configurations
  rpc ListResiliency (ListResiliencyRequest) returns (ListResiliencyResponse) {}
}

// ListComponentsRequest is the request to get components for a sidecar in namespace.
message ListComponentsRequest {
  string namespace = 1;
}

// ComponentUpdateRequest is the request to get updates about new components for a given namespace.
message ComponentUpdateRequest {
  string namespace = 1;
}

// ComponentUpdateEvent includes the updated component event.
message ComponentUpdateEvent {
  bytes component = 1;
}

// ListComponentResponse includes the list of available components.
message ListComponentResponse {
  repeated bytes components = 1;
}

// GetConfigurationRequest is the request message to get the configuration.
message GetConfigurationRequest {
  string name = 1;
  string namespace = 2;
}

// GetConfigurationResponse includes the requested configuration.
message GetConfigurationResponse {
  bytes configuration = 1;
}

// ListSubscriptionsResponse includes pub/sub subscriptions.
message ListSubscriptionsResponse {
  repeated bytes subscriptions = 1;
}

// GetResiliencyRequest is the request to get a resiliency configuration.
message GetResiliencyRequest {
    string name = 1;
    string namespace = 2;
}

// GetResiliencyResponse includes the requested resiliency configuration.
message GetResiliencyResponse {
    bytes resiliency = 1;
}

// ListResiliencyRequest is the requests to get resiliency configurations for a sidecar namespace.
message ListResiliencyRequest {
    string namespace = 1;
}

// ListResiliencyResponse includes the list of available resiliency configurations.
message ListResiliencyResponse {
    repeated bytes resiliencies = 1;
}
